<resources>
    <string name="app_name">EZ-Market</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register"><u>Don\'t have an account? Register</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="city">City</string>
    <string name="create_account">Create Account</string>
    <string name="birthday">Birthday</string>
    <string name="title">Create a New Account</string>
    <string name="female">Female</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="location">Address</string>
    <string name="change_location"><u>Location</u></string>
    <string name="male">Male</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_location">Set</string>
    <string name="title_activity_choose_location">Map</string>
    <string name="select_birthdate">Set</string>
    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="trade_off">Trade-Off</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="logout">Logout</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="categories">Categories</string>
    <string name="sell">Sell</string>
    <string name="chat">Chat</string>
    <string name="cart">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_name">Category Name</string>
    <string name="title_activity_items">ItemsActivity</string>

    <string name="title_activity_set_area">Map</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="miles">miles</string>
    <string name="describe_your_item">Describe your item</string>
    <string name="set_location">Set Location</string>
    <string name="set_price">Set Price</string>
    <string name="what_are_you_selling">What are you selling?</string>
    <string name="post">Post</string>
    <string name="filter"><u>Filter</u></string>
    <string name="price">Price</string>
    <string name="confirm">Confirm</string>
    <string name="reset"><u>Reset</u></string>
    <string name="remove"><u>Remove</u></string>
    <string name="sold"><u>Sold</u></string>
    <string name="open_chat"><u>Chat</u></string>
    <string name="search_city_here">Search City Here</string>
    <string name="search">Search</string>
</resources>
