<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shara.courseproject.RegisterFragment">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/title"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_below="@+id/register_title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/first_name"
        android:layout_alignBottom="@+id/first_name"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/first_name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/mobile_number"
        android:layout_below="@+id/first_name"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/location"
        android:layout_below="@+id/mobile_number"
        android:layout_marginTop="18dp"
        android:hint="@string/birthday" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="19dp"
        android:id="@+id/gender"
        android:layout_below="@+id/birthday"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="City"
        android:layout_marginStart="9dp"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/gender"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_location"
        android:onClick="setLocation"
        android:layout_below="@+id/location"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/select_location"
        android:layout_centerHorizontal="true"
        android:onClick="submit"/>

    <Button
        android:id="@+id/select_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_birthdate"
        android:layout_alignBaseline="@+id/birthday"
        android:layout_alignBottom="@+id/birthday"
        android:layout_alignParentEnd="true"
        android:onClick="datepicker"/>

</RelativeLayout>
