<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="com.example.shara.courseproject.SellFragment">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@android:color/transparent"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/set_price"
        android:layout_toEndOf="@+id/currency"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/product_image"
        android:layout_marginTop="27dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_location"
        android:textColor="@color/blue_700"
        android:clickable="true"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/price"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/locView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/price"
        android:layout_alignTop="@+id/location"
        android:clickable="true"/>

    <EditText
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/what_are_you_selling"
        android:layout_marginTop="11dp"
        android:imeOptions="actionDone"
        android:layout_below="@+id/location"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/describe_your_item"
         android:layout_marginTop="14dp"
         android:id="@+id/describe_product"
         android:imeOptions="actionDone"
         android:layout_below="@+id/product_title"
         android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/describe_product"
        android:layout_alignParentStart="true"
        android:imeOptions="actionDone"/>

    <ImageButton
        android:id="@+id/mGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_menu_gallery"
        tools:ignore="ContentDescription"
        android:layout_alignBottom="@+id/product_image"
        android:layout_alignEnd="@+id/product_image"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue_700"
        android:textColor="@color/white"
        android:text="@string/post"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/category_spinner"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/location"
        android:gravity="center"
        android:textSize="20dp"
        android:text="$"
        android:layout_alignTop="@+id/price" />

</RelativeLayout>
</ScrollView>