<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_alignParentStart="true"
        map:cameraTargetLat="32.772399"
        map:cameraTargetLng="-117.072286"
        map:cameraZoom="12"
        map:mapType="normal"
        map:uiCompass="true"
        map:uiRotateGestures="true"
        map:uiScrollGestures="true"
        map:uiTiltGestures="true"
        map:uiZoomControls="true"
        map:uiZoomGestures="true"
        tools:context="com.example.shara.courseproject.SetArea"
        android:layout_above="@+id/seekBarLayout"
        android:layout_below="@+id/search_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/blue_700"
            android:onClick="cancel"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_alignBaseline="@+id/cancel"
            android:layout_alignBottom="@+id/cancel"
            android:textColor="@color/blue_700"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap"
            android:onClick="save"/>

    </RelativeLayout>

    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:src="@android:drawable/divider_horizontal_dark"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        android:layout_above="@+id/search_text"
        android:layout_alignParentStart="true"
        android:background="@android:color/darker_gray"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/seekBarLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:max="100"
        android:progress="40"/>

        <TextView
            android:id="@+id/miles"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/seekBar"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <EditText
        android:id="@+id/search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search_city_here"
        android:layout_alignBottom="@+id/search_button"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/search_button"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onMapSearch"
        android:text="@string/search"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentEnd="true" />

</RelativeLayout>