<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.example.shara.courseproject.FilterFragment">

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:id="@+id/seekBar4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/seekBar3"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/start_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar4"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/end_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/start_limit" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:background="@drawable/custom_ok"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/cancel"
        android:layout_alignBottom="@+id/cancel" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/cancel"
        android:background="@drawable/custom_button"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/recycler_view"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textColor="@color/blue_700"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="Categories"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/minus"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:textAlignment="center"
        android:scrollbars="vertical"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Min"
        android:layout_alignBaseline="@+id/start_limit"
        android:layout_alignBottom="@+id/start_limit"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Max"
        android:layout_alignBottom="@+id/seekBar4"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/plus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="+"
        android:layout_alignTop="@+id/start_limit"
        android:layout_toEndOf="@+id/seekBar3"
        android:layout_marginStart="14dp" />

    <Button
        android:id="@+id/minus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="-"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_alignTop="@+id/end_limit"
        android:layout_alignStart="@+id/plus" />



</RelativeLayout>
